--- a/Lazztech.ObsidianPresense.Vision.Microservice.Cli/Dockerfile
+++ b/Lazztech.ObsidianPresense.Vision.Microservice.Cli/Dockerfile
@@ -2,6 +2,7 @@ FROM microsoft/dotnet:2.1-runtime AS base
 WORKDIR /app
 
 FROM microsoft/dotnet:2.1-sdk AS build
+RUN apt-get update -y && apt-get install python3.6 -y
 WORKDIR /src
 COPY Lazztech.ObsidianPresences.sln ./
 COPY Lazztech.ObsidianPresense.Vision.Microservice.Cli/Lazztech.ObsidianPresense.Vision.Microservice.Cli.csproj Lazztech.ObsidianPresense.Vision.Microservice.Cli/
