--- a/Lazztech.ObsidianPresense.Vision.Microservice.Cli/Dockerfile
+++ b/Lazztech.ObsidianPresense.Vision.Microservice.Cli/Dockerfile
@@ -2,10 +2,10 @@ FROM microsoft/dotnet:2.1-runtime AS base
 WORKDIR /app
 
 FROM microsoft/dotnet:2.1-sdk AS build
-RUN apt-get update -y
-RUN apt-get install -y software-properties-common
-RUN add-apt-repository ppa:deadsnakes/ppa
-RUN apt-get update -y && apt-get install python3.6 -y
+#RUN apt-get update -y && apt-get install -y software-properties-common && add-apt-repository ppa:deadsnakes/ppa && apt-get install python3 -y
+#RUN apt-get install -y software-properties-common
+#RUN add-apt-repository ppa:deadsnakes/ppa
+RUN apt-get update -y && apt-get install python3 -y
 WORKDIR /src
 COPY Lazztech.ObsidianPresences.sln ./
 COPY Lazztech.ObsidianPresense.Vision.Microservice.Cli/Lazztech.ObsidianPresense.Vision.Microservice.Cli.csproj Lazztech.ObsidianPresense.Vision.Microservice.Cli/
