--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3.4'
 
 services:
-  lazztech.obsidianpresense.vision.microservice.webapi:
-    image: lazztechobsidianpresensevisionmicroservice
+  test:
+    image: test
     build:
       context: .
-      dockerfile: Lazztech.ObsidianPresense.Vision.Microservice.Webapi/Dockerfile
+      dockerfile: test/Dockerfile
+
