--- a/Lazztech.ObsidianPresense.Vision.Microservice.Webapi/Properties/launchSettings.json
+++ b/Lazztech.ObsidianPresense.Vision.Microservice.Webapi/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Lazztech.ObsidianPresense.Vision.Microservice.Webapi": {
+    "Lazztech.ObsidianPresenses.Vision.Microservice.Webapi": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
