--- a/Lazztech.ObsidianPresense.Vision.Microservice.Webapi/Dockerfile
+++ b/Lazztech.ObsidianPresense.Vision.Microservice.Webapi/Dockerfile
@@ -1,14 +1,14 @@
-FROM microsoft/aspnetcore:2.1 AS base
+﻿FROM microsoft/aspnetcore:2.1 AS base
 WORKDIR /app
 EXPOSE 80
 
 FROM microsoft/aspnetcore-build:2.1 AS build
 WORKDIR /src
 COPY Lazztech.ObsidianPresences.sln ./
-COPY Lazztech.ObsidianPresense.Vision.Microservice.Webapi/Lazztech.ObsidianPresense.Vision.Microservice.Webapi.csproj Lazztech.ObsidianPresense.Vision.Microservice.Webapi/
+COPY Lazztech.ObsidianPresenses.Vision.Microservice.Webapi/Lazztech.ObsidianPresenses.Vision.Microservice.Webapi.csproj Lazztech.ObsidianPresenses.Vision.Microservice.Webapi/
 RUN dotnet restore -nowarn:msb3202,nu1503
 COPY . .
-WORKDIR /src/Lazztech.ObsidianPresense.Vision.Microservice.Webapi
+WORKDIR /src/Lazztech.ObsidianPresenses.Vision.Microservice.Webapi
 RUN dotnet build -c Release -o /app
 
 FROM build AS publish
@@ -17,4 +17,4 @@ RUN dotnet publish -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "Lazztech.ObsidianPresense.Vision.Microservice.Webapi.dll"]
+ENTRYPOINT ["dotnet", "Lazztech.ObsidianPresenses.Vision.Microservice.Webapi.dll"]
