--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,7 +1,7 @@
-version: '3.4'
+﻿version: '3.4'
 
 services:
-  lazztech.obsidianpresense.vision.microservice.webapi:
+  Lazztech.ObsidianPresenses.vision.microservice.webapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
