* docker-compose.yml: Namespace and file adjustments to pluralized   form along with docker-compose.yml
* Dockerfile:
* Program.cs:
* Class1.cs:
* Program.cs:
* Dockerfile:
* Startup.cs:
* Person.cs:
* appsettings.json:
* FaceBox.cs:
* Vertice.cs:
* Location.cs:
* Snapshot.cs:
* Likelyhood.cs:
* appsettings.Development.json:
* launchSettings.json:
* ValuesController.cs:
* GoogleCloudVisionParser.cs:
* Lazztech.ObsidianPresenses.Vision.Microservice.Cli.csproj:
* Lazztech.ObsidianPresenses.Vision.Microservice.Domain.csproj:
* Lazztech.ObsidianPresenses.Vision.Microservice.Webapi.csproj:
* Lazztech.ObsidianPresenses.Vision.Microservice.GoogleCloudVision.csproj:

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 version: '3.4'
 
 services:
-  test:
-    image: test
+  lazztech.obsidianpresense.vision.microservice.cli:
+    image: lazztechobsidianpresensevisionmicroservicecli
     build:
       context: .
-      dockerfile: test/Dockerfile
+      dockerfile: Lazztech.ObsidianPresense.Vision.Microservice.Cli/Dockerfile
 
+  lazztech.obsidianpresense.vision.microservice.webapi:
+    image: lazztechobsidianpresensevisionmicroservicewebapi
+    build:
+      context: .
+      dockerfile: Lazztech.ObsidianPresense.Vision.Microservice.Webapi/Dockerfile
