* docker-compose.override.yml: Deleted the   docker-compose.override.yml and that seems to have fixed the docker   compose build
* docker-compose.yml:

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.4'
 
 services:
-  lazztech.obsidianpresense.vision.microservice.cli:
+  lazztech.obsidianpresenses.vision.microservice.cli:
     image: lazztechobsidianpresensevisionmicroservicecli
     build:
       context: .
-      dockerfile: Lazztech.ObsidianPresense.Vision.Microservice.Cli/Dockerfile
+      dockerfile: Lazztech.ObsidianPresenses.Vision.Microservice.Cli/Dockerfile
 
-  lazztech.obsidianpresense.vision.microservice.webapi:
+  lazztech.obsidianpresenses.vision.microservice.webapi:
     image: lazztechobsidianpresensevisionmicroservicewebapi
     build:
       context: .
-      dockerfile: Lazztech.ObsidianPresense.Vision.Microservice.Webapi/Dockerfile
+      dockerfile: Lazztech.ObsidianPresenses.Vision.Microservice.Webapi/Dockerfile
