--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,9 @@ version: '3.4'
 services:
   lazztech.obsidianpresenses.vision.microservice.cli:
     image: lazztechobsidianpresensevisionmicroservicecli
+    volumes:
+      - /Users/gianlazzarini/Desktop/face_recognition:/face/
     build:
       context: .
       dockerfile: Lazztech.ObsidianPresenses.Vision.Microservice.Cli/Dockerfile
-
-  lazztech.obsidianpresenses.vision.microservice.webapi:
-    image: lazztechobsidianpresensevisionmicroservicewebapi
-    build:
-      context: .
-      dockerfile: Lazztech.ObsidianPresenses.Vision.Microservice.Webapi/Dockerfile
 
