--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,25 @@
 {
     "version": "2.0.0",
     "tasks": [
+        // {
+        //     "label": "build",
+        //     "command": "dotnet",
+        //     "type": "process",
+        //     "args": [
+        //         "build",
+        //         "${workspaceFolder}/Lazztech.ObsidianPresenses.Vision.Microservice.Cli/Lazztech.ObsidianPresenses.Vision.Microservice.Cli.csproj"
+        //     ],
+        //     "problemMatcher": "$msCompile"
+        // },
         {
             "label": "build",
             "command": "dotnet",
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/Lazztech.ObsidianPresenses.Vision.Microservice.Cli/Lazztech.ObsidianPresenses.Vision.Microservice.Cli.csproj"
+                "${workspaceFolder}/Lazztech.ObsidianPresences.sln"
             ],
             "problemMatcher": "$msCompile"
-        }
+        },
     ]
 }
