--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,16 +1,6 @@
 {
     "version": "2.0.0",
     "tasks": [
-        // {
-        //     "label": "build",
-        //     "command": "dotnet",
-        //     "type": "process",
-        //     "args": [
-        //         "build",
-        //         "${workspaceFolder}/Lazztech.ObsidianPresenses.Vision.Microservice.Cli/Lazztech.ObsidianPresenses.Vision.Microservice.Cli.csproj"
-        //     ],
-        //     "problemMatcher": "$msCompile"
-        // },
         {
             "label": "build",
             "command": "dotnet",
@@ -18,6 +8,15 @@
             "args": [
                 "build",
                 "${workspaceFolder}/Lazztech.ObsidianPresences.sln"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "preDockerDebug",
+            "command": "docker-compose",
+            "type": "process",
+            "args": [
+                "up"
             ],
             "problemMatcher": "$msCompile"
         },
