--- a/Lazztech.ObsidianPresences.Vision.Microservice.Cli/Lazztech.ObsidianPresences.Vision.Microservice.Cli.csproj
+++ b/Lazztech.ObsidianPresences.Vision.Microservice.Cli/Lazztech.ObsidianPresences.Vision.Microservice.Cli.csproj
@@ -11,6 +11,6 @@
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta0004" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lazztech.ObsidianPresenses.Vision.Microservice.GoogleCloudVision\Lazztech.ObsidianPresenses.Vision.Microservice.GoogleCloudVision.csproj" />
+    <ProjectReference Include="..\Lazztech.ObsidianPresences.Vision.Microservice.GoogleCloudVision\Lazztech.ObsidianPresences.Vision.Microservice.GoogleCloudVision.csproj" />
   </ItemGroup>
 </Project>
