--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.4'
 
 services:
-  lazztech.obsidianpresenses.vision.microservice.cli:
+  lazztech.ObsidianPresences.vision.microservice.cli:
     image: lazztechobsidianpresensevisionmicroservicecli
     volumes:
       - /Users/gianlazzarini/Desktop/face_recognition:/face/
     build:
       context: .
-      dockerfile: Lazztech.ObsidianPresenses.Vision.Microservice.Cli/Dockerfile
+      dockerfile: Lazztech.ObsidianPresences.Vision.Microservice.Cli/Dockerfile
 
