--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,9 @@ services:
 
 
   lazztech.obsidianpresences.cloudwebapp:
-    image: lazztechobsidianpresences
+    image: lazztechobsidianpresencescloudwebapp
+    ports: 
+      - 5000:5000
     build:
       context: .
       dockerfile: Lazztech.ObsidianPresences.CloudWebApp/Dockerfile
