--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
 
   lazztech.obsidianpresences.cloudwebapp:
     image: lazztechobsidianpresencescloudwebapp
+    volumes:
+      - /Users/gianlazzarini/Desktop/face_recognition:/face/
     ports: 
       - 5000:5000
     build:
