docker aspnet core watch

--- a/Lazztech.ObsidianPresences.CloudWebApp/Dockerfile
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Dockerfile
@@ -19,4 +19,4 @@ RUN dotnet publish -c Release -o /app
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "Lazztech.ObsidianPresences.CloudWebApp.dll"]
+ENTRYPOINT ["dotnet watch", "Lazztech.ObsidianPresences.CloudWebApp.dll"]
