Fixed dockerfile path for WebAPI project in docker-compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,5 @@ services:
       - 5000:5001
     build:
       context: .
-      dockerfile: Lazztech.ObsidianPresences.CloudWebApp/Dockerfile
+      dockerfile: Lazztech.ObsidianPresences.Vision.Microservice.WebAPI/Dockerfile
 
