Added docker support for Webapi project.

--- a/Lazztech.ObsidianPresences.Vision.Microservice.WebAPI/Lazztech.ObsidianPresences.Vision.Microservice.WebAPI.csproj
+++ b/Lazztech.ObsidianPresences.Vision.Microservice.WebAPI/Lazztech.ObsidianPresences.Vision.Microservice.WebAPI.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <DockerTargetOS>Linux</DockerTargetOS>
+    <UserSecretsId>7c630684-07ea-45b8-8db9-b9e81699524b</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.1916590" />
   </ItemGroup>
 
 </Project>
