--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
 #      - /Users/gianlazzarini/Desktop/face_recognition:/face/
 #      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
       - C:\face_recognition:/face/
+    networks:
+      - api
     ports: 
 #      - 5000:5000
 #      - 5001:5001
