docker-compose depends_on: field

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       - C:\face_recognition:/face/
     ports: 
       - 80:80
+    depends_on:
+      - lazztech.ObsidianPresences.vision.microservice.webapi
     build:
       context: .
       dockerfile: Lazztech.ObsidianPresences.CloudWebApp/Dockerfile
