--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 version: '3.4'
 
 services:
-  lazztech.ObsidianPresences.vision.microservice.cli:
-    image: lazztechobsidianpresensevisionmicroservicecli
-    volumes:
-#      - /Users/gianlazzarini/Desktop/face_recognition:/face/
-#      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
-      - C:\face_recognition:/face/
-    build:
-      context: .
-      dockerfile: Lazztech.ObsidianPresences.Vision.Microservice.Cli/Dockerfile
+#  lazztech.ObsidianPresences.vision.microservice.cli:
+#    image: lazztechobsidianpresensevisionmicroservicecli
+#    volumes:
+##      - /Users/gianlazzarini/Desktop/face_recognition:/face/
+##      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
+##      - C:\face_recognition:/face/
+#      - lazztech-cloud-data:/face/
+#    build:
+#      context: .
+#      dockerfile: Lazztech.ObsidianPresences.Vision.Microservice.Cli/Dockerfile
 
 
   lazztech.obsidianpresences.cloudwebapp:
@@ -27,7 +28,8 @@ services:
     volumes:
 #      - /Users/gianlazzarini/Desktop/face_recognition:/face/
 #      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
-      - C:\face_recognition:/face/
+#      - C:\face_recognition:/face/
+      - lazztech-cloud-data:/face/
 #    networks:
 #      - api
     ports: 
