--- a/docker-compose.rpi-cluster-prod.yml
+++ b/docker-compose.rpi-cluster-prod.yml
@@ -1,17 +1,6 @@
 version: '3.4'
 
 services:
-#  lazztech.ObsidianPresences.vision.microservice.cli:
-#    image: lazztechobsidianpresensevisionmicroservicecli
-#    volumes:
-##      - /Users/gianlazzarini/Desktop/face_recognition:/face/
-##      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
-##      - C:\face_recognition:/face/
-#      - lazztech-cloud-data:/face/
-#    build:
-#      context: .
-#      dockerfile: Lazztech.ObsidianPresences.Vision.Microservice.Cli/Dockerfile
-
   lazztech.obsidianpresences.cloudwebapp:
     image: lazztechobsidianpresencescloudwebapp
     ports:
@@ -20,17 +9,12 @@ services:
       - lazztech.obsidianpresences.vision.microservice.webapi
     build:
       context: .
-      dockerfile: Lazztech.ObsidianPresences.CloudWebApp/Dockerfile
+      dockerfile: Lazztech.ObsidianPresences.CloudWebApp/Dockerfile.Rpi
 
   lazztech.obsidianpresences.vision.microservice.webapi:
     image: lazztechobsidianpresensevisionmicroservicewebapi
     volumes:
-#      - /Users/gianlazzarini/Desktop/face_recognition:/face/
-#      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
-#      - C:\face_recognition:/face/
       - lazztech-cloud-data:/face/
-#    networks:
-#      - api
     ports:
 #      - 5000:5000
 #      - 5001:5001
@@ -41,7 +25,7 @@ services:
       - 5000:5000
     build:
       context: .
-      dockerfile: Lazztech.ObsidianPresences.Vision.Microservice.Webapi/Dockerfile
+      dockerfile: Lazztech.ObsidianPresences.Vision.Microservice.Webapi/Dockerfile.Rpi
 
 volumes:
   lazztech-cloud-data:
