--- a/Lazztech.ObsidianPresences.CloudWebApp/Dockerfile.Rpi
+++ b/Lazztech.ObsidianPresences.CloudWebApp/Dockerfile.Rpi
@@ -1,27 +1,33 @@
 FROM microsoft/dotnet:2.1-aspnetcore-runtime-stretch-slim-arm32v7 AS base
+#ENV ASPNETCORE_URLS=http://+:5000
+ENV ASPNETCORE_URLS=http://+:80
+#ENV ASPNETCORE_URLS=http://*:80
 WORKDIR /app
 EXPOSE 80
-EXPOSE 50199
-EXPOSE 5000
 
 FROM microsoft/dotnet:2.1-sdk AS build
+#ENV ASPNETCORE_URLS=http://+:5000
+ENV ASPNETCORE_URLS=http://+:80
+#ENV ASPNETCORE_URLS=http://*:80
 WORKDIR /src
+COPY Lazztech.ObsidianPresences.sln ./
 COPY ["Lazztech.ObsidianPresences.Vision.Microservice.Webapi/Lazztech.ObsidianPresences.Vision.Microservice.Webapi.csproj", "Lazztech.ObsidianPresences.Vision.Microservice.Webapi/"]
 COPY Lazztech.ObsidianPresences.CloudWebApp/Lazztech.ObsidianPresences.CloudWebApp.csproj Lazztech.ObsidianPresences.CloudWebApp/
 COPY Lazztech.ObsidianPresences.Vision.Microservice.Cli/Lazztech.ObsidianPresences.Vision.Microservice.Cli.csproj Lazztech.ObsidianPresences.Vision.Microservice.Cli/
 COPY Lazztech.ObsidianPresences.Vision.Microservice.GoogleCloudVision/Lazztech.ObsidianPresences.Vision.Microservice.GoogleCloudVision.csproj Lazztech.ObsidianPresences.Vision.Microservice.GoogleCloudVision/
 COPY Lazztech.ObsidianPresences.Vision.Microservice.Domain/Lazztech.ObsidianPresences.Vision.Microservice.Domain.csproj Lazztech.ObsidianPresences.Vision.Microservice.Domain/
 COPY Lazztech.ObsidianPresences.Vision.Microservice.Tests/Lazztech.ObsidianPresences.Vision.Microservice.Tests.csproj Lazztech.ObsidianPresences.Vision.Microservice.Tests/
-COPY docker-compose.dcproj .
-RUN dotnet restore "Lazztech.ObsidianPresences.Vision.Microservice.Webapi/Lazztech.ObsidianPresences.Vision.Microservice.Webapi.csproj"
+COPY docker-compose.dcproj ./
+#RUN dotnet restore -nowarn:msb3202,nu1503
+RUN dotnet restore Lazztech.ObsidianPresences.sln -nowarn:msb3202,nu1503
 COPY . .
-WORKDIR "/src/Lazztech.ObsidianPresences.Vision.Microservice.Webapi"
-RUN dotnet build "Lazztech.ObsidianPresences.Vision.Microservice.Webapi.csproj" -c Release -o /app
+WORKDIR /src/Lazztech.ObsidianPresences.CloudWebApp
+RUN dotnet build -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "Lazztech.ObsidianPresences.Vision.Microservice.Webapi.csproj" -c Release -o /app -r linux-arm
+RUN dotnet publish -c Release -o /app  -r linux-arm
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "Lazztech.ObsidianPresences.Vision.Microservice.Webapi.dll"]
+ENTRYPOINT ["dotnet", "Lazztech.ObsidianPresences.CloudWebApp.dll"]
