--- a/docker-compose.rpi-cluster-prod.yml
+++ b/docker-compose.rpi-cluster-prod.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   lazztech.obsidianpresences.cloudwebapp:
-    image: lazztechobsidianpresencescloudwebapp
+    image: lazztechobsidianpresencescloudwebapp:arm32
     ports:
       - 80:80
     depends_on:
@@ -12,7 +12,7 @@ services:
       dockerfile: Lazztech.ObsidianPresences.CloudWebApp/Dockerfile.Rpi
 
   lazztech.obsidianpresences.vision.microservice.webapi:
-    image: lazztechobsidianpresensevisionmicroservicewebapi
+    image: lazztechobsidianpresensevisionmicroservicewebapi:arm32
     volumes:
       - lazztech-cloud-data:/face/
     ports:
