--- a/docker-compose.rpi-cluster-prod.yml
+++ b/docker-compose.rpi-cluster-prod.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 services:
-  lazztech.obsidianpresences.cloudwebapp:
+  lazztech-obsidianpresences-cloudwebapp:
     image: gianlazzarini/lazztechobsidianpresencescloudwebapp:arm32
     ports:
       - 80:80
@@ -11,7 +11,7 @@ services:
       context: .
       dockerfile: Lazztech.ObsidianPresences.CloudWebApp/Dockerfile.Rpi
 
-  lazztech.obsidianpresences.vision.microservice.webapi:
+  lazztech-obsidianpresences-vision-microservice-webapi:
     image: gianlazzarini/lazztechobsidianpresensevisionmicroservicewebapi:arm32
     volumes:
       - lazztech-cloud-data:/face/
