Fixing docker-compose.rpi-cluster-prod.yml depends_on parameter.

--- a/docker-compose.rpi-cluster-prod.yml
+++ b/docker-compose.rpi-cluster-prod.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 80:80
     depends_on:
-      - lazztech.obsidianpresences.vision.microservice.webapi
+      - lazztech-obsidianpresences-vision--webapi
     build:
       context: .
       dockerfile: Lazztech.ObsidianPresences.CloudWebApp/Dockerfile.Rpi
