--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -37,8 +37,8 @@ services:
     volumes:
 #      - /Users/gianlazzarini/Desktop/face_recognition:/face/
 #      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
-#      - C:\face_recognition:/face/
-      - lazztech-cloud-data:/face/
+     - C:\face_recognition:/face/
+      # - lazztech-cloud-data:/face/
 #    networks:
 #      - api
     ports: 
@@ -53,5 +53,5 @@ services:
       context: .
       dockerfile: Lazztech.ObsidianPresences.Vision.Microservice.Webapi/Dockerfile
 
-volumes:
-  lazztech-cloud-data:
+# volumes:
+#   lazztech-cloud-data:
