--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,11 @@ services:
 
   lazztech.obsidianpresences.clientfacade:
     image: lazztechobsidianpresencesclientfacade
+    volumes:
+#      - /Users/gianlazzarini/Desktop/face_recognition:/face/
+#      - C:\Users\Gian Lazzarini\Desktop\face_recognition:/face/
+#      - C:\face_recognition:/face/
+      - lazztech-cloud-data:/face/
     ports: 
       - 80:80
     depends_on:
