Adding postgresql docker container to the docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,5 +35,11 @@ services:
       context: .
       dockerfile: Lazztech.ObsidianPresences.ClientFacade/Dockerfile
 
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: example
+
 volumes:
   lazztech-cloud-data:
