--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -37,5 +37,11 @@ services:
       context: .
       dockerfile: Lazztech.ObsidianPresences.ClientFacade/Dockerfile
 
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: example
+
 # volumes:
 #   lazztech-cloud-data:
