Working on the connection string for the docker postgresql service

--- a/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
+++ b/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DBHOST;Database=DBNAME;Username=DBUSER;Password=DBPASSWORD"
+    "DefaultConnection": "Server=db;Database=DBNAME;Username=DBUSER;Password=example",
+    //"DefaultConnection": "User ID = user;Password=pass;Server=postgres;Port=5432;Database=testdb;Integrated Security=true;Pooling=true"
   },
   "Logging": {
     "LogLevel": {
