--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -31,17 +31,28 @@ services:
       # - lazztech-cloud-data:/face/
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      DB_CONNECTION_STRING: "host=postgres_image;port=5432;database=values_db;username=dbuser;password=dbpwd"
+
     ports: 
       - 80:80
     build:
       context: .
       dockerfile: Lazztech.ObsidianPresences.ClientFacade/Dockerfile
 
-  db:
-    image: postgres
-    restart: always
+  postgres_image:
+    image: postgres:alpine
+    ports:
+      - "5432:5432"
     environment:
-      POSTGRES_PASSWORD: example
+    POSTGRES_USER: "dbuser"
+    POSTGRES_PASSWORD: "dbpwd"
+    POSTGRES_DB: "values_db"
+
+#  db:
+#    image: postgres
+#    restart: always
+#    environment:
+#      POSTGRES_PASSWORD: example
 
 # volumes:
 #   lazztech-cloud-data:
