--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -30,9 +30,8 @@ services:
      - C:\face_recognition:/face/
       # - lazztech-cloud-data:/face/
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
       DB_CONNECTION_STRING: "host=postgres_image;port=5432;database=values_db;username=dbuser;password=dbpwd"
-
+      ASPNETCORE_ENVIRONMENT: "Development"
     ports: 
       - 80:80
     build:
@@ -41,12 +40,12 @@ services:
 
   postgres_image:
     image: postgres:alpine
-    ports:
-      - "5432:5432"
+#    ports:
+#      - "5432:5432"
     environment:
-    POSTGRES_USER: "dbuser"
-    POSTGRES_PASSWORD: "dbpwd"
-    POSTGRES_DB: "values_db"
+      POSTGRES_USER: "dbuser"
+      POSTGRES_PASSWORD: "dbpwd"
+      POSTGRES_DB: "values_db"
 
 #  db:
 #    image: postgres
