--- a/Lazztech.ObsidianPresences.ClientFacade/Dockerfile.Rpi
+++ b/Lazztech.ObsidianPresences.ClientFacade/Dockerfile.Rpi
@@ -22,22 +22,16 @@ ENV LANG C.UTF-8
 
 FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
-COPY ["Lazztech.ObsidianPresences.Vision.Microservice.Webapi/Lazztech.ObsidianPresences.Vision.Microservice.Webapi.csproj", "Lazztech.ObsidianPresences.Vision.Microservice.Webapi/"]
-COPY Lazztech.ObsidianPresences.CloudWebApp/Lazztech.ObsidianPresences.CloudWebApp.csproj Lazztech.ObsidianPresences.CloudWebApp/
-COPY Lazztech.ObsidianPresences.Vision.Microservice.Cli/Lazztech.ObsidianPresences.Vision.Microservice.Cli.csproj Lazztech.ObsidianPresences.Vision.Microservice.Cli/
-COPY Lazztech.ObsidianPresences.Vision.Microservice.GoogleCloudVision/Lazztech.ObsidianPresences.Vision.Microservice.GoogleCloudVision.csproj Lazztech.ObsidianPresences.Vision.Microservice.GoogleCloudVision/
-COPY Lazztech.ObsidianPresences.Vision.Microservice.Domain/Lazztech.ObsidianPresences.Vision.Microservice.Domain.csproj Lazztech.ObsidianPresences.Vision.Microservice.Domain/
-COPY Lazztech.ObsidianPresences.Vision.Microservice.Tests/Lazztech.ObsidianPresences.Vision.Microservice.Tests.csproj Lazztech.ObsidianPresences.Vision.Microservice.Tests/
-COPY docker-compose.dcproj .
-RUN dotnet restore "Lazztech.ObsidianPresences.Vision.Microservice.Webapi/Lazztech.ObsidianPresences.Vision.Microservice.Webapi.csproj"
+COPY ["Lazztech.ObsidianPresences.ClientFacade/Lazztech.ObsidianPresences.ClientFacade.csproj", "Lazztech.ObsidianPresences.ClientFacade/"]
+RUN dotnet restore "Lazztech.ObsidianPresences.ClientFacade/Lazztech.ObsidianPresences.ClientFacade.csproj"
 COPY . .
-WORKDIR "/src/Lazztech.ObsidianPresences.Vision.Microservice.Webapi"
-RUN dotnet build "Lazztech.ObsidianPresences.Vision.Microservice.Webapi.csproj" -c Release -o /app
+WORKDIR "/src/Lazztech.ObsidianPresences.ClientFacade"
+RUN dotnet build "Lazztech.ObsidianPresences.ClientFacade.csproj" -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish "Lazztech.ObsidianPresences.Vision.Microservice.Webapi.csproj" -c Release -o /app -r linux-arm
+RUN dotnet publish "Lazztech.ObsidianPresences.ClientFacade.csproj" -c Release -o /app -r linux-arm
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app .
-ENTRYPOINT ["dotnet", "Lazztech.ObsidianPresences.Vision.Microservice.Webapi.dll"]
+ENTRYPOINT ["dotnet", "Lazztech.ObsidianPresences.ClientFacade.dll"]
