--- a/Lazztech.Events/Lazztech.Events.csproj
+++ b/Lazztech.Events/Lazztech.Events.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Sms\" />
+    <Folder Include="RepositoryPattern\" />
   </ItemGroup>
 
 </Project>
