Deleted the old plants page, added notes for the day and turned of the required auth on the pages temporarily

--- a/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
+++ b/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=DBNAME;Username=DBUSER;Password=example",
-    //"DefaultConnection": "User ID = user;Password=pass;Server=postgres;Port=5432;Database=testdb;Integrated Security=true;Pooling=true"
+    //"DefaultConnection": "Server=db;Database=DBNAME;Username=DBUSER;Password=example",
+    "DefaultConnection": "host=postgres_image;port=5432;database=values_db;username=dbuser;password=dbpwd"
   },
   "Logging": {
     "LogLevel": {
