Added event index from HackathonHandler and link on the Events index

--- a/Lazztech.ObsidianPresences.ClientFacade/Lazztech.ObsidianPresences.ClientFacade.csproj
+++ b/Lazztech.ObsidianPresences.ClientFacade/Lazztech.ObsidianPresences.ClientFacade.csproj
@@ -55,7 +55,7 @@
 
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
-    <Folder Include="Pages\Events\" />
+    <Folder Include="Pages\Events\Admin\" />
   </ItemGroup>
 
 </Project>
