Setting up appsetting.json for twilio api credentials

--- a/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
+++ b/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
@@ -5,6 +5,11 @@
     //"LazztechObsidianPresencesClientFacadeContext": "Server=(localdb)\\mssqllocaldb;Database=LazztechObsidianPresencesClientFacadeContext-7a0664ca-099f-491f-812b-60a0bcd262ba;Trusted_Connection=True;MultipleActiveResultSets=true",
     //"TempDBContext": "Server=(localdb)\\mssqllocaldb;Database=TempDBContext-44de7a9b-9f83-4dfd-af91-b2284d5afce2;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "TwilioCredentials": {
+    "AccountSid": "",
+    "AuthToken": "",
+    "TwilioFromNumber" :  ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
