Added DefaultAdminUser seeding and section for appsettings

--- a/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
+++ b/Lazztech.ObsidianPresences.ClientFacade/appsettings.json
@@ -6,7 +6,12 @@
   "TwilioCredentials": {
     "AccountSid": "",
     "AuthToken": "",
-    "TwilioFromNumber" :  ""
+    "TwilioFromNumber": ""
+  },
+  "DefaultAdminUser": {
+    "Username": "",
+    "Email": "",
+    "Password": ""
   },
   "Logging": {
     "LogLevel": {
