Renamed projects and solution

--- a/Lazztech.ObsidianPresences.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
+++ b/Lazztech.ObsidianPresences.ClientFacade/Lazztech.Cloud.ClientFacade.csproj
@@ -22,7 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Lazztech.DIContext\Lazztech.DIContext.csproj" />
     <ProjectReference Include="..\Lazztech.Events\Lazztech.Events.csproj" />
-    <ProjectReference Include="..\Lazztech.ObsidianPresences.Vision.Microservice.Domain\Lazztech.ObsidianPresences.Vision.Microservice.Domain.csproj" />
+    <ProjectReference Include="..\Lazztech.ObsidianPresences.Vision.Microservice.Domain\Lazztech.Vision.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
